--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,10 @@ langchain_pinecone
 langchain[docarray]
 docarray
 pydantic==1.10.8  
+pytube 
 python-dotenv
+tiktoken 
+pinecone-client 
+scikit-learn
+ruff
+git+https://github.com/openai/whisper.git
